# llm-wiki-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  restart_servers.py  start_backend.py  start_servers.py
.trae/: plan.md
config/: a_share_ab_test.yaml  a_share_test_sources.yaml  approval_policies.yaml  arxiv_sources.yaml  database.example.yaml  github_sources.yaml  jarvis.yaml  pg-optimize.sql  postgresql.conf.optimized  rss_sources.yaml  schema.sql  scraper_config.yaml  web_sources.yaml
docs/: a_share_ab_test_report.md  a_share_crawler_test_report.md  api-frontend-coverage-report.md  automation-pipeline.md  competitive-analysis-2025.md  competitive-landscape-2026-update.md  competitor-analysis-and-roadmap.md  cross-domain-integration-brainstorm.md  divergent-thinking-five-iterations.md  divergent-thinking-iterations-11-to-15.md  divergent-thinking-iterations-16-to-25.md  divergent-thinking-iterations-6-to-10.md  e2e-test-plan.md  graphify-integration-guide.md  integration-playbook.md  jarvis-diagnostic-report.md  strategic-roadmap-consolidated.md  ui-ux-critique-report-v2.html  ui-ux-critique-report.html  wiki-viewer-react-plan.md  wiki-viewer-ux-audit.md
graph/: code-graph.json  graph-report.md  graph.graphml  graph.html  graph.json  graph_edges.csv  graph_nodes.csv
mcp-servers/: installed.json
raw/: auto-graph-test.md  final-iteration-test.md  finally-block-test.md  graph-rebuild-verify.md  iteration-test.md  log-file-test.md  log-verify-test.md  threading-rebuild-test.md
skills/: installed.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
tests/: test_crawler_acceptance.py  test_graph_integration.py  test_llm_connection.py
tools/: api_server.py  archive_stale.py  auto_ingest.py  batch_compiler.py  batch_ingest.py  build_graph.py  chat_api.py  cli.py  (+39 more)
(+1097 files in other folders)
