[project]
name = "llm-wiki"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "markitdown[all] (>=0.1.5,<0.2.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "litellm (>=1.83.10,<1.84.0)",
    "networkx (>=3.6.1,<3.7.0)",
    "mcp (>=1.2.0,<2.0.0)",
    "jinja2 (>=3.1.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
